<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyContacts</string>
	<string name="tabContacts">Contactes</string>
	<string name="tabGroups">Grups</string>
	<string name="tabFavourites">Favorits</string>
	<string name="contact_photo">Foto Contacte</string>
	<string name="group_photo">Foto grup</string>
	<string name="search">Cercar contacte</string>
	<string name="delete_contact_dialog_title">Esborra contacte</string>
	<string name="delete_contact_dialog_message">Estas segur que desitges esborrar el contacte?</string>
	<string name="delete_group_dialog_title">Esborra grup</string>
	<string name="delete_group_dialog_message">Estas segur que desitges esborrar el grup?</string>
	<string name="delete_dialog_ok">Accepta</string>
	<string name="delete_dialog_no">Cancel·la</string>
	<string name="contactsclick_call">Truca</string>
	<string name="contactsclick_edit">Edita contacte</string>
	<string name="contactsclick_remove">Esborra contacte</string>
	<string name="contactsmenu_add">Afegeix contacte</string>
	<string name="contactsmenu_about">Sobre</string>
	<string name="contactdetailsmenu_edit">Edita</string>
	<string name="contactdetailsmenu_remove">Esborra</string>
	<string name="groupsclick_edit">Edita grup</string>
	<string name="groupsclick_remove">Esborra grup</string>
	<string name="groupsmenu_add">Afegeix grup</string>
	<string name="groupdetailsmenu_edit">Edita</string>
	<string name="groupdetails_reorder">Ordena contactes</string>
	<string name="groupdetailsmenu_remove">Esborra</string>
	<string name="newgroup_save">Guarda</string>
	<string name="newgroup_cancel">Cancel·la</string>
	<string name="up">Amunt</string>
	<string name="down">Avall</string>
	<string name="mode_off">Edita posicions</string>
	<string name="mode_on">Finalitza edició</string>
	<string name="emptyContacts">\nNo tens cap contacte per mostrar,\naixò pot ser degut a una <b>cerca</b>\nsense resultats o a la <b>falta de contactes</b>.\n\nPer afegir un contacte:\n\n<ul><li>Clica sobre el botó de <b>menú</b></li>\n\n<li>Selecciona la opció <b>Afegir contacte</b></li>\n\n<li>Omple les dades del contacte i prem <b>Guardar</b></li></ul></string>
	<string name="emptyContactsOnCreateGroup">\nNo tens cap contacte per afegir al grup.</string>
	<string name="emptyFavourites">\nNo tens cap favorit per mostrar\nPer afegir-ne un:\n\n<ul><li>Clica la pestanya de <b>contactes</b></li>\n\n<li>Mou-te per la <b>llista</b> de contactes</li>\n\n<li>Clica sobre la <b>estrella</b> del contacte que vulguis de favorit</li></ul></string>
	<string name="emptyGroups">\nNo tens cap grup per mostrar\nPer afegir-ne un:\n\n<ul><li>Clica sobre el botó de <b>menú</b></li>\n\n<li>Selecciona la opció <b>Afegir grup</b></li>\n\n<li>Omple les dades del grup i prem <b>Guardar</b></li></ul></string>
	<string name="telf_contacte_detall"><b>Teléfons:</b></string>
	<string name="mail_contacte_detall"><b>Emails:</b></string>
	<string name="contactes_grup_detall"><b>Contactes del grup:</b></string>
	<string name="group_name_label">Nom del grup</string>
	<string name="contactsgroup_label">Contactes del grup:</string>
</resources>