<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <LinearLayout
        android:id="@+id/GroupNameLayout"
        android:orientation="vertical"
        android:focusable="true"
    	android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:paddingTop="10dp" >
        
	    <EditText
	        android:id="@+id/group_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:maxLines="1"
			android:hint="@string/group_name_label" >
	        <requestFocus />
	    </EditText>
	    
	   	<TextView
        android:id="@+id/contacts_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="5dp"
  		android:text="@string/contactsgroup_label" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >
	    
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:text="@string/newgroup_save" />
       
       <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:text="@string/newgroup_cancel" />
        

    </LinearLayout>
    
    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="true"
        android:layout_above="@id/ButtonsLayout"
        android:layout_below="@id/GroupNameLayout" >
    </ListView>
    
    <TextView
        android:id="@+id/emptyViewContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/GroupNameLayout"
        android:text="@string/emptyContactsOnCreateGroup" />

</RelativeLayout>