<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
        	android:id="@+id/fotoGrupDetall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/contact_photo" />
        
       	<TextView
        	android:id="@+id/nomGrupDetall"
        	
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_toRightOf="@id/fotoGrupDetall"
        	
        	android:maxWidth="120dp"
        	
        	android:textAppearance="?android:attr/textAppearanceLarge" />
       	
       	<ToggleButton
	        android:id="@+id/button_mode"
	        
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:focusable="false"
	        
	        android:textOn="@string/mode_on"
	        android:textOff="@string/mode_off"
	        android:textSize="10dip" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/contactesTagGrupDetall"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        
	        android:text="@string/contactes_grup_detall"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    

       	
  	</LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="true" >
    </ListView>

</LinearLayout>