<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
        	android:id="@+id/fotoContacteDetall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/contact_photo" />
        
       	<TextView
        	android:id="@+id/nomContacteDetall"
        	
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/telefonsTagContacteDetall"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        
        android:text="@string/telf_contacte_detall"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:id="@+id/llistaTelefons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
   	</LinearLayout>

    <TextView
        android:id="@+id/emailsTagContacteDetall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/mail_contacte_detall"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/llistaEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
   	</LinearLayout>

</LinearLayout>